Update mew-banner docs

--- a/stories/MewButton/MewButtonDoc.mdx
+++ b/stories/MewButton/MewButtonDoc.mdx
@@ -2,7 +2,7 @@ import { Props } from '@storybook/addon-docs/blocks'
 import MewButton from '@/components/MewButton/MewButton.vue';
 import defaultBtn from './screenshots/default-btn.png';
 
-# MEW Button Docs
+# MEW Button 
 
 The mew-button component replaces Vuetify v-btn button with MEW theme options and additional props. This is a flex component with minimum width 64px, centered text and font Size: 14px.
 
