--- a/stories/MewBanner/MewBannerDoc.mdx
+++ b/stories/MewBanner/MewBannerDoc.mdx
@@ -1,7 +1,7 @@
 
 import { Story, Preview, Props } from '@storybook/addon-docs/blocks';
 import MewBanner from '@/components/MewBanner/MewBanner.vue';
-import './MewBanner.scss'
+import './../GlobalStorybook.scss'
 
 # MEW Banner
 MEW Banner is used in the dapps module. It acts as a dapp’s screen header. It has one action, close dapp, which will return the user to the Dapps Center screen. The bannerImg prop is used to show the dapp image, with the Image aspect ratios = []. If the image is not passed, the default MEW picture will be displayed. Please refer to the example below.
@@ -17,5 +17,5 @@ exit: this value is used to replace the action button text. The default value is
 ## Props
 <Props of={MewBanner} />
 <Preview><Story id="mewbanner--mew-banner" /></Preview>
-Codepen: <a href="https://codepen.io/gesseekur/pen/jOWGeeL?editors=1111" id="Bar">Click here</a>
+Codepen: <a target="_blank" href="https://codepen.io/gesseekur/pen/jOWGeeL?editors=1111" id="Bar">Click here</a>
 
