Update codepen and docs

--- a/stories/MewBanner/MewBannerDoc.mdx
+++ b/stories/MewBanner/MewBannerDoc.mdx
@@ -17,5 +17,5 @@ exit: this value is used to replace the action button text. The default value is
 ## Props
 <Props of={MewBanner} />
 <Preview><Story id="mewbanner--mew-banner" /></Preview>
-Codepen: <a target="_blank" href="https://codepen.io/gesseekur/pen/jOWGeeL?editors=1111" id="Bar">Click here</a>
+Codepen: <a target="_blank" href="https://codepen.io/gesseekur/pen/JjGOxBa" id="Bar">Click here</a>
 
