--- a/stories/MewBanner/MewBannerDoc.mdx
+++ b/stories/MewBanner/MewBannerDoc.mdx
@@ -14,6 +14,7 @@ exit: this value is used to replace the action button text. The default value is
 
 <br />
 
+<b>Codepen</b>: <a target="_blank" href="https://codepen.io/gesseekur/pen/JjGOxBa" id="Bar">Click here</a>
 ## Props
 <Props of={MewBanner} />
 <Preview><Story id="mewbanner--mew-banner" /></Preview>
