--- a/stories/MewButton/MewButtonDoc.mdx
+++ b/stories/MewButton/MewButtonDoc.mdx
@@ -16,11 +16,11 @@ MEW theme options include: primary, basic, error, secondary and white.
 Please refer to the *Button Themes* section.
 
 *Infographic*
+<b>Codepen:</b> <a target="_blank" href="https://codepen.io/gesseekur/pen/jOWGeeL" id="Bar">Click here</a>
 
 
 ## Props
 <Props of={MewButton} />
-Codepen: <a target="_blank" href="https://codepen.io/gesseekur/pen/jOWGeeL" id="Bar">Click here</a>
 
 # Button Styles
 
