Add watcher, docs and update stepper

--- a/stories/MewBanner/MewBanner.mdx
+++ b/stories/MewBanner/MewBanner.mdx
@@ -4,6 +4,9 @@ import MewBanner from '@/components/MewBanner/MewBanner.vue';
 import './../GlobalStorybook.scss'
 
 # MEW Banner
+`<mew-banner />`
+
+## Overview
 MEW Banner is used in the dapps module. It acts as a dapp’s screen header. It has one action, close dapp, which will return the user to the Dapps Center screen. The bannerImg prop is used to show the dapp image, with the Image aspect ratios = []. If the image is not passed, the default MEW picture will be displayed. Please refer to the example below.
 <p>*Need: Infographic*</p>
 
@@ -12,11 +15,6 @@ title: this value is used to display the Dapp’s Name.
 subtext: this value is used to display a short one sentence description about the dapp. 
 exit: this value is used to replace the action button text. The default value is ‘Exit Dapp’.
 <b>Codepen</b>: <a target="_blank" href="https://codepen.io/gesseekur/pen/JjGOxBa" id="Bar">Click here</a>
-
-
-<br/>
-<br/>
-<br />
 
 ## Props
 <Props of={MewBanner} />
