--- a/stories/MewButton/MewButton.mdx
+++ b/stories/MewButton/MewButton.mdx
@@ -3,6 +3,7 @@ import MewButton from '@/components/MewButton/MewButton.vue';
 import './../GlobalStorybook.scss'
 
 # MEW Button 
+`<mew-button />`
 
 ## Overview
 
