--- a/stories/MewSuperButton/MewSuperButton.mdx
+++ b/stories/MewSuperButton/MewSuperButton.mdx
@@ -2,7 +2,8 @@ import { Props, Story, Preview } from '@storybook/addon-docs/blocks'
 import MewSuperButton from '@/components/MewSuperButton/MewSuperButton.vue';
 import './../GlobalStorybook.scss'
 
-# MEW Super Button Docs
+# MEW Super Button 
+`<mew-super-button />`
 
 ## Overview
 
