--- a/stories/MewTooltip/MewTooltipDoc.mdx
+++ b/stories/MewTooltip/MewTooltipDoc.mdx
@@ -2,7 +2,8 @@ import { Props, Story, Preview } from '@storybook/addon-docs/blocks'
 import MewTooltip from '@/components/MewTooltip/MewTooltip.vue';
 import './../GlobalStorybook.scss'
 
-# Mew Tooltip Docs
+# MEW Tooltip 
+`<mew-tooltip />`
 
 ## Overview
 
