--- a/stories/MewWarningSheet/MewWarningSheet.mdx
+++ b/stories/MewWarningSheet/MewWarningSheet.mdx
@@ -2,13 +2,12 @@ import { Story, Preview, Props } from '@storybook/addon-docs/blocks';
 import MewWarningSheet from '@/components/MewWarningSheet/MewWarningSheet.vue';
 import './../GlobalStorybook.scss'
 
-# Warning Sheet
+# MEW Warning Sheet
+`<mew-warning-sheet />`
 
+## Overview
 The Warning-Sheet is a flex component that is usually used on the platform to display a warning message to the user and a link that will provide additional educational content. It has an icon that is permanently positioned to the left of the message. Please see the usage example on V6. 
 It has 3 props for message title, description, and link content.
-
-
-<br />
 
 ## Props
 <Props of={MewWarningSheet} />
