--- a/stories/MewButton/MewButton.mdx
+++ b/stories/MewButton/MewButton.mdx
@@ -8,7 +8,7 @@ import './../GlobalStorybook.scss'
 ## Overview
 
 The mew-button component replaces the Vuetify v-btn button with acceptable MEW theme options. This is a flex component with a minimum width of 64px, centered text, and a font size of 14px. 
-MEW theme options include: primary, basic, error, secondary and white. 
+MEW theme options include: primary, basic, error, royal (blue500) and white. 
 Please refer to the *Button Themes* section.
 
 *Infographic*
