--- a/stories/MewToggle/MewToggle.mdx
+++ b/stories/MewToggle/MewToggle.mdx
@@ -7,7 +7,7 @@ import './../GlobalStorybook.scss'
 `<mew-toggle />`
 
 ## Overview
-The MEW Toggle Button component is a group of buttons used to filter specific data to the user. It is mainly used to filter dates and percentages. It takes 2 props: **button-type** and **button-group**. There are 3 possible button types, which are custom, default, and percentage. **Default** is used to filter dates, and it has a blue background (named `secondary` in the MEW color palette) during the active state. **Percentage** is used to filter out percentages of a value and shows a green border (named `primary` in the MEW color palette) during the active state. **Custom** is selected when a user wants to use a custom button style, and it is created by using slots (button + ‘index of button’). **Button-group** is used to pass the title for each button. It takes an array of strings. 
+The MEW Toggle Button component is a group of buttons used to filter specific data to the user. It is mainly used to filter dates and percentages. It takes 2 props: **button-type** and **button-group**. There are 3 possible button types, which are custom, default, and percentage. **Default** is used to filter dates, and it has a blue background (named `blue500` in the MEW color palette) during the active state. **Percentage** is used to filter out percentages of a value and shows a green border (named `primary` in the MEW color palette) during the active state. **Custom** is selected when a user wants to use a custom button style, and it is created by using slots (button + ‘index of button’). **Button-group** is used to pass the title for each button. It takes an array of strings. 
 
 
 
