--- a/stories/MewAlert/MewAlert.mdx
+++ b/stories/MewAlert/MewAlert.mdx
@@ -7,7 +7,9 @@ import './../GlobalStorybook.scss'
 
 ## Overview
 
-The mew-alert component is used to display different types of alerts, such as: error, warning, success, info. The type of alert is determined by the **theme** prop.
+The mew-alert component is used to display different types of alerts, such as: error, warning, success, and info. The type of alert shown is determined by the **theme** prop. It is very customizable 
+due to the default **slot** that can be used in lieu of the **text** and **description** prop. There are also options to hide the icons as well. You may pass the **link-obj** prop to add a link
+at the end of the description.
 
 ## Props
 <Props of={MewAlert} />
