--- a/stories/MewTokenContainer/MewTokenContainer.mdx
+++ b/stories/MewTokenContainer/MewTokenContainer.mdx
@@ -7,7 +7,9 @@ import './../GlobalStorybook.scss'
 `<mew-token-container />`
 
 ## Overview
-The token container component is used to display icons of the ERC20 tokens on the interface. There are 3 size options: small, medium, and large. The small size is used as default. Acceptable icon prop formats are ‘.png’ and ‘.svg’. If the icon prop is not specified, the default image will be used.
+The mew-token-container component is used to display token icons found on the interface. 
+There are 3 **size** prop options: small (24px), medium(32px), and large(52px).Size small is used as default. 
+Acceptable icon prop formats are ‘.png’ and ‘.svg’. If the **img** prop is not specified, the placeholder is used as default.
 ## Props
 <Props of={MewTokenContainer} />
 <Preview><Story id="mewtokencontainer--mew-token-container" /></Preview>
