--- a/stories/MewButton/MewButton.mdx
+++ b/stories/MewButton/MewButton.mdx
@@ -7,9 +7,8 @@ import './../GlobalStorybook.scss'
 
 ## Overview
 
-The mew-button component replaces the Vuetify v-btn button with acceptable MEW theme options. This is a flex component with with different sizes (small, medium, large, xlarge), centered text, and a font size of 14px. 
-MEW theme options include: primary, secondary, basic, error, royal (blue500). 
-Please refer to the *Button Themes* section.
+The mew-button component replaces the Vuetify v-btn with acceptable MEW theme options. This is a flex component with with different sizes (small, medium, large, xlarge), centered text, and a font size of 14px. 
+MEW button color theme options include: primary, secondary, basic, error, royal (blue500). 
 
 ## Props
 <Props of={MewButton} />
