--- a/stories/MewToast/MewToast.mdx
+++ b/stories/MewToast/MewToast.mdx
@@ -7,9 +7,8 @@ import './../GlobalStorybook.scss'
 `<mew-toast />`
 
 ## Overview
-The Toast component is used to present a one-time notification to the user. The component is a bottom sheet that has a short message. The message will disappear after several seconds. The component also supports persistent view if the **persistent** prop is set to true. The **can-close** prop will display a button to the right of the component, which will allow a user to manually close the sheet. The **duration** prop determines how long the sheet is shown to the user in milliseconds. Please use a minimum of 5 seconds. The **toast-type** prop determines the background color, and an icon that will be shown to the user.
- 
-The Toast component can take 2 text options. The **text** prop will display simple text, while the **link-obj** prop displays a link on the toast message. The link can be used on it’s own or together with the text prop. It will always follow the text to the right side.
+The Toast component is used to present a one-time notification to the user. The component is a bottom sheet that has a short message. The message will disappear after several seconds. The component also supports persistent view if the **persistent** prop is set to true. The **can-close** prop will display a button to the right of the component, which will allow a user to manually close the sheet. The **duration** prop determines how long the sheet is shown to the user in milliseconds. Please use a minimum of 5 seconds. The **toast-type** prop determines the background color, and icon that will be shown to the user. <br />
+The Toast component takes 2 text options. The **text** prop will display simple text, while the **linkObj** prop displays a link on the toast message. The link can be used on it’s own or together with the text prop. It will always follow the text to the right side.
 
 ## Props
 <Props of={MewToast} />
