--- a/stories/MewTransformHash/MewTransformHashDoc.mdx
+++ b/stories/MewTransformHash/MewTransformHashDoc.mdx
@@ -6,8 +6,8 @@ import './../GlobalStorybook.scss'
 `<mew-transform hash />`
 
 ## Overview
-<br />
-<b>'mew-transform-hash'</b>  is used to truncate hashes. All you have to do is pass a hash to the :hash prop.
+MEW transform hash component is used to truncate hashes. All you have to do is pass a string to the **hash** prop. The **justifyStart**
+prop will change the positioning of the component.
 <br />
 
 ## Props
