--- a/stories/MewWarningSheet/MewWarningSheet.mdx
+++ b/stories/MewWarningSheet/MewWarningSheet.mdx
@@ -6,8 +6,10 @@ import './../GlobalStorybook.scss'
 `<mew-warning-sheet />`
 
 ## Overview
-The Warning-Sheet is a flex component that is usually used on the platform to display a warning message to the user and a link that will provide additional educational content. It has an icon that is permanently positioned to the left of the message. Please see the usage example on V6. 
-It has 3 props for message title, description, and link content.
+The MEW warning sheet component is a flex component that is usually used on the platform to display
+ a warning message to the user and a link that will provide additional educational content.
+  It has an icon that is permanently positioned to the left of the message. Please see the usage example on V6. 
+It has 3 props to display text: **title**, **description**, and **linkObj** content.
 
 ## Props
 <Props of={MewWarningSheet} />
