--- a/stories/MewTokenContainer/MewTokenContainer.mdx
+++ b/stories/MewTokenContainer/MewTokenContainer.mdx
@@ -9,7 +9,7 @@ import './../GlobalStorybook.scss'
 ## Overview
 The mew-token-container component is used to display token icons found on the interface. 
 There are 3 **size** prop options: small (24px), medium(32px), and large(52px).Size small is used as default. 
-Acceptable icon prop formats are ‘.png’ and ‘.svg’. If the **img** prop is not specified, the placeholder is used as default.
+Acceptable icon prop formats are ‘.png’ and ‘.svg’. If the **img** prop is not specified, the placeholder is used.
 ## Props
 <Props of={MewTokenContainer} />
 <Preview><Story id="mewtokencontainer--mew-token-container" /></Preview>
