--- a/stories/MewTooltip/MewTooltipDoc.mdx
+++ b/stories/MewTooltip/MewTooltipDoc.mdx
@@ -7,10 +7,12 @@ import './../GlobalStorybook.scss'
 
 ## Overview
 
-<b>'mew-tooltip'</b> is used as a brief, informative message box when hovering over an item on desktop view or through touch on mobile view. The text prop is used to pass additional informational text. The text container has a grey outline and white background. 
+MEW tooltip component is used to display a brief,
+ informative message box when hovering over an item on desktop view or through touch on mobile view. 
+ The **text** prop is used to pass informational text. The text container has a grey outline and white background. 
 
 ## Props
 <Props of={MewTooltip} />
 
 ## Example
-<Preview><Story id="mewinfocard--mew-info-card" /></Preview>
+<Preview><Story id="mewtooltip--mew-tooltip" /></Preview>
