--- a/stories/MewBadge/MewBadge.mdx
+++ b/stories/MewBadge/MewBadge.mdx
@@ -7,7 +7,7 @@ import './../GlobalStorybook.scss'
 `<mew-badge />`
 
 ## Overview
-MEW Badge is used to display quick information. It is mainly used for mew-notification at the moment. There are 5 different types ('in', 'out', 'swap, 'error', 'warning').
+MEW Badge is used to display quick information. It is mainly used for mew-notification at the moment. There are 5 different types (in, out, swap, error, warning).
 Each one displays a different color for better readability. You can set the title by passing a string to **badgeTitle**.
 
 
