--- a/stories/MewSelect/MewSelect.mdx
+++ b/stories/MewSelect/MewSelect.mdx
@@ -9,8 +9,8 @@ import './../GlobalStorybook.scss'
 ## Overview
 MEW select replaces Vuetify's v-select with acceptable MEW theme options. It is used as a way to collect 
 information from a list of options. There are two main styles to this component, one which is the default style
-and the other which will show more customized options like adding a filter or icon. This is enabled by the 
-**isCustom** prop. This style is mainly used to display tokens in the wallet pages.
+and the other one which will show more customized options like adding a filter input or icon. This is enabled by the 
+**isCustom** prop. This style is mainly used to display tokens on the wallet pages.
 
 ## Props
 <Props of={MewSelect} />
