devop: add borderSize prop to mew-token-container

--- a/stories/MewTokenContainer/MewTokenContainer.mdx
+++ b/stories/MewTokenContainer/MewTokenContainer.mdx
@@ -8,7 +8,8 @@ import './../GlobalStorybook.scss'
 
 ## Overview
 The mew-token-container component is used to display token icons found on the interface. 
-There are 3 **size** prop options: small (24px), medium(32px), and large(52px).Size small is used as default. 
+There are 3 **size** prop options: small (24px), medium(32px), and large(52px).Size small is used as default. Also a pixel value is accepted.
+To use **borderSize** prop, you must give pixel value to **size** prop.
 Acceptable icon prop formats are ‘.png’ and ‘.svg’. If the **img** prop is not specified, the placeholder is used.
 ## Props
 <Props of={MewTokenContainer} />
